# cyberbasic

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ALL_FEATURES_IMPLEMENTED.md  API.MD  BASIC Language.md  CMakeLists.txt  CMakeLists.txt.backup  COMPREHENSIVE_UPGRADE_PLAN.md  DEPENDENCIES.md  DOT_NOTATION_UPGRADE_PLAN.md  INSTALL.md  InstallationLog.txt  LICENSE  NEXT_PRIORITIES.md  PLAN_COMPILER.md  PROGRESS_LOG.md  QUICK_START_UPGRADE.md  RAYLIB_API_COVERAGE.md  README.md  UPGRADE_SUMMARY.md  advanced_test.bas  ai_pong.bas  build.bat  build.py  build.sh  build_log.txt  check-system.py  cyberbasicMSG.af  demo.bas  err_forin.txt  fix_all_examples.py  fix_drawtext.py  fix_drawtext_final.py  full_build_log.txt  graphics_test.bas  gui_test.bas  install_deps.py  install_log.txt  (+20 more)
docs/: 2D_GRAPHICS_GUIDE.md  3D_GRAPHICS_GUIDE.md  ADVANCED_FEATURES_GUIDE.md  BASIC_PROGRAMMING_GUIDE.md  BLOCK_STRUCTURE_GUIDE.md  CODING_STYLE.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_INDEX.md  ECS_SYSTEM_GUIDE.md  (+18 more)
source/: BUILD_CROSS_PLATFORM.md  BUILD_GUIDE.md  CMakeLists.txt  COMPILATION_FIXES.md  EASY_START_GUIDE.md  FIXES_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_FIXES_SUMMARY.md  LINKING_FIXES.md  README.md  README_BUILD.md  build-complete-static-enhanced.ps1  build-complete-static.ps1  build-dist.bat  build-robust.ps1  build-static-linux.sh  build-static-macos.sh  build-static-universal.sh  build.bat  build.ps1  build.sh  fps_game.bas  install_deps.py  run_test.py  spinning_cube.bas
source/cmake/: Modules.cmake  PreventMSVC.cmake
source/docs/implementation/: ADVANCED_FEATURES_IMPLEMENTATION.md  BASIC_STATEMENTS_IMPLEMENTATION.md  C++20_MODERNIZATION.md  CHECKLIST.md  COMPLETE_ASSESSMENT.md  CONTINUED_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS.md  DOT_NOTATION_IMPLEMENTATION_STATUS.md  ENUM_PARSER_FIX.md  FEATURE_IMPLEMENTATION_STATUS.md  FEATURE_VERIFICATION_STATUS.md  FINAL_UPGRADE_STATUS.md  GAME_COMMANDS_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS_COMPLETE.md  ISSUES_FOUND_AND_FIXED.md  MODERN_FEATURES_IMPLEMENTATION.md  NEW_FEATURES_SUMMARY.md  PLAN.md  README.md  README_UPGRADE.md  RECOMMENDED_NEXT_STEPS.md  STATE_SYSTEM_IMPLEMENTATION_STATUS.md  UPGRADE_ACHIEVEMENTS.md  UPGRADE_COMPLETE_SUMMARY.md  UPGRADE_SUMMARY.md
source/include/bas/: advanced_features.hpp  ai.hpp  animation_system.hpp  ast.hpp  audio.hpp  builtins.hpp  builtins_file.hpp  builtins_json.hpp  camera3d.hpp  camera_shake.hpp  collision_system.hpp  custom_cyberbasic.hpp  ecs_system.hpp  game_commands.hpp  graphics.hpp  gui.hpp  gui_control.hpp  gui_controls.hpp  gui_layout.hpp  gui_manager.hpp  gui_style.hpp  gui_types.hpp  input_events.hpp  level_editor.hpp  lighting3d.hpp  models3d.hpp  modern_features.hpp  modern_state_system.hpp  module_base.hpp  namespace_registry.hpp  networking.hpp  networking_advanced.hpp  parser.hpp  particle_system_registry.hpp  platform.hpp  post_processing_registry.hpp  raygui_helpers.hpp  raymath.hpp  raymath_helpers.hpp  runtime.hpp  (+11 more)
source/scripts/: build-mingw.sh  run-example.sh  run-tests.sh
source/specs/: 01_window_management.yaml  02_basic_graphics.yaml  02_cursor_management.yaml  03_colors.yaml  03_drawing_core.yaml  04_basic_drawing.yaml  04_vr_and_shaders.yaml  05_input.yaml  05_screen_space_camera.yaml  06_audio.yaml  06_timing_and_control.yaml  07_file_management.yaml  07_textures_images.yaml  08_fonts_text.yaml  08_input_system.yaml  09_3d_graphics.yaml  09_camera_system_advanced.yaml  10_advanced_graphics.yaml  10_shapes_texture_setup.yaml  11_basic_shapes.yaml  11_physics_animation.yaml  12_rectangles_triangles.yaml  12_shaders.yaml  13_advanced_3d.yaml  13_splines_curves.yaml  14_collision_detection.yaml  14_post_processing.yaml  15_image_loading.yaml  15_remaining_raylib.yaml  16_font_text_system.yaml  16_platform_specific.yaml  17_3d_shapes_models.yaml  17_custom_cyberbasic.yaml  18_3d_camera_system.yaml  18_audio_system.yaml  19_animation_system.yaml  19_math_utilities.yaml  20_advanced_3d_features.yaml  20_color_constants.yaml  21_particle_system.yaml  (+25 more)
source/src/: builtins_audio.cpp  builtins_console.cpp  builtins_core.cpp  builtins_graphics.cpp  custom_cyberbasic.cpp  main.cpp
source/src/bindings/: rt_raylib.gen.cpp
source/src/core/: builtins_file.cpp  builtins_json.cpp  builtins_objects.cpp  interpreter.cpp  lexer.cpp  namespace_registry.cpp  parser.cpp  runtime.cpp  type_system.cpp  yaml_module_loader.cpp
source/src/modules/3d/: 3d_module.cpp  camera3d.cpp  lighting3d.cpp
source/src/modules/ai/: navigation.cpp
source/src/modules/audio/: audio_module.cpp
source/src/modules/core/: advanced_features.cpp  dot_notation_enhancements.cpp
source/src/modules/game/: advanced_features.cpp  animation_system.cpp  camera_shake.cpp  collision_system.cpp  ecs_system.cpp  game_commands.cpp  game_loop.cpp  game_module.cpp  level_editor_bindings.cpp  modern_features.cpp  modern_state_system.cpp  particle_system_registry.cpp  post_processing_registry.cpp  scene_entity_system.cpp  screen_transitions.cpp  sprite_animation_bindings.cpp  sprite_system.cpp  state_machine.cpp  timer_system.cpp  tween_system.cpp
source/src/modules/graphics/: graphics.cpp
source/src/modules/gui/: gui_bindings.cpp  gui_control.cpp  gui_controls.cpp  gui_layout.cpp  gui_manager.cpp  gui_style.cpp
source/src/modules/networking/: networking.cpp  networking_advanced.cpp  networking_module.cpp
source/src/modules/physics/: physics.cpp  physics_module.cpp
source/src/modules/raylib/: raygui_bindings.cpp  raygui_impl.cpp  raymath_bindings.cpp
source/src/modules/window/: window_manager.hpp
source/tests/: classic_thenless_if_negative.bas  do_repeat_continue.bas  for_in_basic.bas  if_basic.bas  import_basic_main.bas  import_basic_utils.bas  io_readall_writeall.bas  only_cmp.bas  select_case_relations.bas  select_numbers.bas  smoke_lexer.bas  smoke_parser.bas  strings_cmp.bas  strings_mixed_compare_negative.bas  strings_ops.bas  while_for.bas
source/tools/: detect-compiler.ps1  gen_raylib_bindings.py
(+283 files in other folders)
